# echo-ai

./: .cursorrules  .dockerignore  .env.production.example  .gitignore  .mcp.json  ADMIN_PANEL_GUIDE.md  ADMIN_PANEL_SUMMARY.md  AGENT_RULES.md  AI_AGENT_CONTEXT.md  AI_HANDOFF_CONTEXT.md  AUDIT_FIXES_SUMMARY.md  CLAUDE.md  DEBUG_REPORT_2026-01-07.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.worker  LOCAL_DEVELOPMENT.md  PRODUCTION_LAUNCH_PLAN.md  PRODUCTION_READY.md  QUICK_DEPLOY.md  RAILWAY_DEPLOYMENT.md  RAILWAY_FINAL_SETUP.md  RAILWAY_HANDOFF.md  SOLUTION_SUMMARY.md  TECHNICAL_REVIEW_SUMMARY.md  WEBSITE_SITEMAP.md  alembic.ini  check_status.py  cloudbuild.yaml  complete_deployment.sh  continue_deploy.sh  debug_todays_experiments.py  deploy_to_railway.sh  env.example  pyproject.toml  railway.json  start.sh
.agent/: AGENT_RULES.md  HANDOFF.md  RESEARCH_PROMPT.md  SYSTEM_VERIFICATION_REPORT.md
.agent/audits/: 2026-01-15_investor_summary.md  2026-01-15_production_readiness.md  2026-01-15_quick_fixes.md  2026-02-20_ai_seo_visibility_codebase_audit.md
.agent/workflows/: deploy_to_railway.md  setup_custom_domain.md  setup_stripe.md
.claude/: settings.json  sprint-reminder.txt
.cursor/rules/: agent-rule-1.mdc
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_user_tables.py  004_add_iteration_status_index.py  005_add_performance_indexes.py  006_add_performance_indexes.py  c006fbeda77e_add_brand_profile_to_users.py  cc4f512527a5_add_experiment_scheduling.py  d2d9f1e0f3ab_change_quota_from_iterations_to_prompts.py  e001_add_webhook_url_and_cost_tracking.py
backend/: README.md
backend/app/: main.py  worker.py
backend/app/builders/: analysis.py  providers.py  runner.py
backend/app/core/: config.py  database.py  deps.py  logging.py  pricing.py  redis.py  security.py
backend/app/middleware/: __init__.py  security_headers.py
backend/app/models/: __init__.py  demo.py  experiment.py  user.py
backend/app/repositories/: __init__.py  experiment_repo.py
backend/app/routers/: __init__.py  admin.py  auth.py  billing.py  brand.py  dashboard.py  demo.py  experiments.py  health.py
backend/app/schemas/: __init__.py  admin.py  auth.py  brand.py  dashboard.py  experiment.py
backend/app/services/: billing.py  email.py  notifications.py
backend/app/tasks/: maintenance.py  scheduler.py
backend/scripts/: create_test_user.py  debug_scoring.py  debug_visibility.py  seed_test_data.py  test_celery.py  test_regex.py  verify_providers.py
backend/tests/: test_audit_fixes.py  test_productization.py
docs/: AGENT_GUIDE.md  AI_AGENT_CONTEXT.md  AUDIT_VERIFICATION_REPORT.md  PRODUCT.md  echoai_backlog_prioritised.md  echoai_technical_audit.md  non_technical_summary.md  runbook.md
echo-ai-plugin/: .mcp.json  CONNECTORS.md  README.md  settings.json
echo-ai-plugin/.claude-plugin/: marketplace.json  plugin.json
echo-ai-plugin/agents/: code-reviewer.md  customer-success.md  db-analyst.md  debugger.md  marketing-researcher.md
echo-ai-plugin/commands/: api-docs.md  bug-report.md  changelog.md  commit.md  content-brief.md  customer-email.md  db-query.md  deploy.md  launch-post.md  onboarding-doc.md  release.md  sprint-plan.md  standup.md  test.md
echo-ai-plugin/hooks/: hooks.json
echo-ai-plugin/scripts/: auto-format.sh  protect-branches.sh
echo-ai-plugin/skills/api-docs/: SKILL.md
echo-ai-plugin/skills/bug-report/: SKILL.md
frontend/: .env.local.example  .env.production  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  (+2 more)
scripts/: create_test_db.py  dev.sh  init_db.py  wipe_test_db.py
tests/: __init__.py  conftest.py  repro_api_key.py  repro_retention.py  test_auth.py  test_billing.py  test_brand.py  test_dashboard.py  test_experiments.py  test_new_auth_endpoints.py  test_pricing_and_notifications.py  test_security.py  test_security_headers.py  test_token_rotation.py
(+52 files in other folders)
